--- a/styles/sass/partials/_articleSection.scss
+++ b/styles/sass/partials/_articleSection.scss
@@ -14,7 +14,7 @@
         padding: 50px;
         display: flex;
         flex-direction: column;
-
+        gap: 1rem;
         p {
             margin-bottom: 1rem;
         }
