--- a/styles/sass/partials/_infoSection.scss
+++ b/styles/sass/partials/_infoSection.scss
@@ -5,6 +5,7 @@
     ul {
         display: flex;
         flex-direction: column;
+        align-items: center;
         li {
             display: flex;
             flex-direction: column;
